@@ -5,7 +5,8 @@ core:
 * AddressGroup : new function API_add() and API_remove()
 
 utils:
-* rules-edit.php : new Actions 'description-append', 'enabled-set-FastAPI'
+* rules-edit.php : new Actions 'description-append'
+* rules-edit.php : create FastAPI modes for : 'enabled-set', 'logStart-Enable', 'logStart-Disable'
 
 
 1.5.3
